Minor cleanup (deprecation and other warnings removed)